--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "tailwatch": "npx tailwindcss -i ./src/input.css -o ./dist/output.css --watch"
+    "tailwatch": "npx tailwindcss -i ./src/input.css -o ./src/output.css --watch"
   },
   "dependencies": {
     "firebase": "^9.18.0",
